--- a/app/styles.css
+++ b/app/styles.css
@@ -15,7 +15,11 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
-div[data-sidebar="content"] {
+.bg-player {
+  background-color: #18181b;
+}
+div[data-sidebar="content"],
+div[data-sidebar="header"], div[data-sidebar="footer"] {
   background-color: #0a0a0a;
 }
 .playerView {
@@ -23,7 +27,7 @@ div[data-sidebar="content"] {
   position: fixed;
   bottom: 0;
   z-index: 1000;
-  background-color: #18181b;
+  background-color: #0b0b0c;
   color: white;
 }
 .open-sidebar {
@@ -47,11 +51,12 @@ main {
   width: 100%;
 }
 #queue-sheet {
-  width: calc(100vw - 4rem);
-  height: calc(100vh - 10rem);
-  min-height: calc(100vh - 10rem);
-  min-width: calc(100vw - 4rem);
+  width: calc(100vw - 2rem);
+  height: calc(100vh - 5rem);
+  min-height: calc(100vh - 6rem);
+  min-width: calc(100vw - 2rem);
   padding-top: 50px;
+  z-index: 1000;
 }
 .QueueScroll {
   overflow-y: scroll;
@@ -133,6 +138,23 @@ main {
   align-items: start;
   padding: 10px;
 }
+.songInfo {
+  display: inline-flex;
+  align-content: center;
+  justify-content: space-between;
+  gap: 0px;
+}
+.songInfoItem:nth-child(1) {
+  width: 40%;
+}
+.songInfoItem:nth-child(2) {
+  width: 30%;
+  justify-content: end;
+}
+.songInfoItem:nth-child(3) {
+  width: 40%;
+  justify-content: end;
+}
 .font-pop {
   font-family: "Poppins", sans-serif;
 }
@@ -172,15 +194,98 @@ div.insert-0.absolute.size-full {
     max-width: 100vw;
     overflow: hidden;
   }
+  .mobileViewPlayer {
+    height: 90vh;
+  }
+
+  .seekbar {
+    margin-top: 10px;
+  }
+  .iconbtn {
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    gap: 0px;
+  }
+  .iconbtn svg {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    scale: 0.6;
+  }
 }
 
 /* SEEKBAR */
-
 /* === range theme and appearance === */
 .sseekbar {
   width: 100%;
   border-radius: 15px;
   height: 25px;
 }
+.slider {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 100%;
+  height: 25px;
+  border-radius: 15px;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+}
+.volume-slider {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.volume-btn {
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.slider-div {
+  width: 60px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
 
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
 
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Optimize canvas rendering */
+canvas {
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: crisp-edges;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Optimize canvas rendering */
+canvas {
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: crisp-edges;
+}
